Logo lower and fix line spacing for landing page

--- a/styles.css
+++ b/styles.css
@@ -37,13 +37,13 @@ body {
 
 .logo{
   height: 170px;
-  margin-top: 100px;
+  margin-top: 10px;
   padding: 5px;
   top: 0;
 }
 
 .headshot{
-    height: 500px;
+    height: 700px;
 }
 
 .nav{
@@ -89,8 +89,8 @@ body {
 }
 
 .intro{
-    width: 600px;
-    padding-right: 20px;
+    width: 800px;
+    line-height: 1.5;
 }
 
 .main-page{
